-- AlterTable
ALTER TABLE "sesiones_inventario" ADD COLUMN     "sigaCentroCosto" TEXT,
ADD COLUMN     "sigaNombreDependencia" TEXT;
